--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_feather_icons: ^2.0.0+1
   flutter_mjpeg: ^2.0.1
   retry: ^3.1.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
