--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_mjpeg: ^2.0.1
   retry: ^3.1.0
   shared_preferences: ^2.0.15
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
